Added some UI to Pricing page

--- a/src/styles/css/global.css
+++ b/src/styles/css/global.css
@@ -66,6 +66,12 @@
   .get-started {
     @apply text-base flex justify-center w-full;
   }
+  .pricing-plans-grid {
+    @apply col-span-12 mb-4 relative;
+  }
+  .pricing-tab {
+    @apply w-full pt-10 pb-4;
+  }
 }
 @media (min-width: 600px) {
   .hero-page {
@@ -80,6 +86,12 @@
   .get-started {
     @apply text-lg;
   }
+  .pricing-plans-grid {
+    @apply col-span-12 mb-4 relative;
+  }
+  .pricing-tab {
+    @apply w-full pt-10 pb-4;
+  }
 }
 @media (min-width: 840px) {
   .hero-page {
@@ -93,6 +105,22 @@
   }
   .get-started {
     @apply text-xl;
+  }
+  .pricing-plans-grid {
+    @apply col-span-6 mb-4 relative;
+  }
+  .pricing-tab {
+    @apply w-full pt-10 pb-4;
+  }
+}
+@media (min-width: 1024px) {
+  .pricing-tab {
+    @apply w-[20rem];
+  }
+}
+@media (min-width: 1080px) {
+  .pricing-plans-grid {
+    @apply col-span-4 mb-4 relative;
   }
 }
 @layer utilities {}
